test/unittest/error/tst.DTRACEFLT_BADADDR.null_ptr_field.r

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #1
